# cef-example

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/: DownloadCEF.cmake
examples/: CMakeLists.txt
examples/scheme_handler/: CMakeLists.txt  README.md  app_browser_impl.cc  app_subprocess_impl.cc
examples/scheme_handler/shared/: CMakeLists.txt  browser_util.cc  client_util_linux.cc  main_mac.mm  resource_util.cc
src/: CMakeLists.txt  README.md  app_browser_impl.cc  app_subprocess_impl.cc  client.cc  client.h  client_impl.cc  client_impl.h  main.cc  render_handler_impl.hpp  resource_util_win_impl.cc  scheme_handler_impl.cc  scheme_handler_impl.h  scheme_strings.cc  scheme_strings.h  v8handler_impl.cc  v8handler_impl.h
src/resources/: index.html  index.js  test.js
src/shared/: CMakeLists.txt  README.md  client_manager.cc  client_util.cc  client_util.h  client_util_mac.mm  client_util_win.cc  main.h  main_linux.cc  main_util.cc  main_win.cc  mime_types.cpp  mime_types.h  process_helper_mac.cc  resource_util.h  resource_util_linux.cc  resource_util_mac.mm  resource_util_posix.cc  resource_util_win.cc  uuid_v4.hpp
src/shared/win/: shared.rc
